# taped

./: .buildinfo  README.md  conftest.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/taped/: base.html  display.html  tools.html  util.html
_modules/taped/examples/: listen_and_feedback.html  live_audio_pipelines.html
_modules/taped/scrap/: audio_pokes.html  live_audio.html  live_audio_pipelining.html
_sources/: table_of_contents.rst.txt
_sources/module_docs/taped/examples/: gauge_sample_rate_variation.rst.txt
docs/: objects.inv
docsrc/: index.rst
module_docs/: taped.html
module_docs/taped/: audio_pokes.html  base.html  display.html  live_audio.html  live_audio_pipelining.html  tools.html  util.html
module_docs/taped/examples/: gauge_sample_rate_variation.html  listen_and_feedback.html  live_audio_pipelines.html  record_audio_to_files.html
module_docs/taped/scrap/: audio_pokes.html  live_audio.html  live_audio_pipelining.html
taped/: __init__.py  base.py  display.py  tools.py  util.py
taped/examples/: gauge_sample_rate_variation.py  listen_and_feedback.py
