[metadata]
name = taped
description = Python's serene audio accessor
license = mit
description_file = README.md
keywords = 
		
root_url = https://github.com/otosense/
author = OtoSense
display_name = taped

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

